--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "juno-nodejs",
-  "version": "1.0.14",
+  "name": "@drewaker/juno-nodejs",
+  "version": "1.0.15",
   "description": "Esse projeto destina-se a pessoas que estão realizando a integração com a API de pagamentos [JUNO](https://juno.com.br/) e estão encontrando problemas para realizar o hash do cartão de crédito no Frontend.",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "start": "tsc -w",
-    "prepublish": "npm run build"
+    "prepublish": "yarn run build"
   },
   "author": "Murilo Campaner",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "1.1.0",
     "base-64": "^0.1.0",
     "isomorphic-webcrypto": "^2.3.6",
     "qs": "^6.9.4"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/base-64": "^0.1.3",
-    "@types/node": "^14.0.12",
+    "@types/node": "^18.11.9",
     "@types/qs": "^6.9.3",
-    "typescript": "^3.9.5"
+    "typescript": "^4.8.4"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/murilo-campaner/juno-nodejs.git"
+    "url": "git+https://github.com/flaviolima9904/juno-nodejs.git"
   },
   "keywords": [
     "juno",
@@ -39,7 +38,7 @@
     "pagamentos"
   ],
   "bugs": {
-    "url": "https://github.com/murilo-campaner/juno-nodejs/issues"
+    "url": "https://github.com/flaviolima9904/juno-nodejs/issues"
   },
-  "homepage": "https://github.com/murilo-campaner/juno-nodejs#readme"
+  "homepage": "https://github.com/flaviolima9904/juno-nodejs#readme"
 }
